# thoughtful-ask

./: README.md  pyproject.toml
src/: agent.py  llm_client.py  main.py  qna_loader.py
